--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,7 @@
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
   --font-sans: Inter, sans-serif;
+  --color-bgGreen: #1cab55;
 }
 
 :root {
